# LytSyn

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: app.rs  config.rs  config.toml  config.yaml  drpc.rs  main.rs  player.rs  playtree.rs  renderer.rs  sound.rs
