[package]
name = "lytsyn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.21.0", features = [ "serde" ] }
directories = "4.0.1"
glob = "0.3.0"
serde = {version = "1.0.130", features = ["derive"] }
serde_derive = "^1.0"
serde_yaml = "0.8.21"
tui = { version = "0.16.0", default-features = false, features = ['crossterm', 'serde'] }
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.5.8"
rodio = "0.14.0"
discord_game_sdk = "1.0.1"
chrono = "0.4.19"
# ureq = "2.2"
# urlqstring = "0.3.5"
# viuer = "0.5.2"
# ytd-rs = "0.1.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
bench = false
path = "src/main.rs"
name = "LytSyn"